--- a/skins/index.html
+++ b/skins/index.html
@@ -10,19 +10,18 @@
 	<body>
 		<fieldset>
 		    <legend><strong>页面换肤</strong></legend>
-		    <img onclick="change1()" src="img/sk1.png"/> 
-		    <img onclick="change2()" src="img/sk2.png"/>
-		    <img onclick="change3()" src="img/sk3.png"/>
-		    <img onclick="change4()" src="img/sk4.png"/>
-		    <img onclick="change5()" src="img/sk5.png"/>
-		    <img onclick="change6()" src="img/sk6.png"/>
+		    <div id='i1'><img  onclick="change1()" src="img/sk1.png"/></div> 
+		    <div id='i2'><img  onclick="change2()" src="img/sk2.png"/></div>
+		    <div id='i3'><img  onclick="change3()" src="img/sk3.png"/></div>
+		    <div id='i4'><img  onclick="change4()" src="img/sk4.png"/></div>
+		    <div id='i5'><img  onclick="change5()" src="img/sk5.png"/></div>
+		    <div id='i6'><img  onclick="change6()" src="img/sk6.png"/></div>
+		    
 		<br/>
 		<br/>
 		<div id = "d1">
 		    <p fontsize="24px">LocalStorage将数据保存在客户端本地的硬件设备中，即使浏览器关闭了，该数据仍然存在，下次打开浏览器访问网站时仍然可以继续使用。</p>
 		</div>
-		   
-	    </fieldset>
-			
+	  </fieldset>
 	</body>
 </html>
